--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     tools:context=".PersonalFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,6 +30,20 @@
             android:background="@drawable/box"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <View
+            android:id="@+id/transparentBg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#66000000"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5" />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
@@ -83,6 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your explore list is"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold" />
 
             <TextView
@@ -126,9 +141,6 @@
             app:layout_constraintTop_toBottomOf="@id/increaseRadiusText" />
 
 
-
-
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/fabConstraint"
             android:layout_width="wrap_content"
@@ -143,8 +155,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="12dp"
-                app:backgroundTint="@color/material_dynamic_primary20"
                 android:tint="@color/material_dynamic_primary20"
+                app:backgroundTint="@color/material_dynamic_primary20"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/baseline_add_24"
@@ -155,9 +167,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
-                app:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
+                app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/mainFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/mainFabBtn"
                 app:srcCompat="@drawable/baseline_edit_note_24"
@@ -171,9 +183,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Notes"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/notesFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/notesFabBtn"
                 app:layout_constraintTop_toTopOf="@id/notesFabBtn" />
@@ -184,8 +196,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
-                android:backgroundTint="@android:color/holo_orange_light" app:backgroundTint="@android:color/holo_orange_light"    android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:backgroundTint="@android:color/holo_orange_light"
+                android:tint="@android:color/holo_orange_light"
+                android:visibility="invisible"
+                app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/notesFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/notesFabBtn"
                 app:srcCompat="@drawable/baseline_shopping_bag_24"
@@ -199,9 +213,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Jobs"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/jobsFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/jobsFabBtn"
                 app:layout_constraintTop_toTopOf="@id/jobsFabBtn" />
@@ -213,7 +227,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/jobsFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/jobsFabBtn"
@@ -228,9 +242,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Netclan Groups"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/netClanGroupsFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/netClanGroupsFabBtn"
                 app:layout_constraintTop_toTopOf="@id/netClanGroupsFabBtn" />
@@ -243,7 +257,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/netClanGroupsFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/netClanGroupsFabBtn"
@@ -258,9 +272,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Business Cards"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/businessCardsFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/businessCardsFabBtn"
                 app:layout_constraintTop_toTopOf="@id/businessCardsFabBtn" />
@@ -273,7 +287,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/businessCardsFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/businessCardsFabBtn"
@@ -288,9 +302,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Buy-Sell-Rent"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/buySellRentFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/buySellRentFabBtn"
                 app:layout_constraintTop_toTopOf="@id/buySellRentFabBtn" />
@@ -303,7 +317,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/buySellRentFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/buySellRentFabBtn"
@@ -318,9 +332,9 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Matrimony"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/matriMoneyFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/matriMoneyFabBtn"
                 app:layout_constraintTop_toTopOf="@id/matriMoneyFabBtn" />
@@ -333,7 +347,7 @@
                 android:layout_marginBottom="12dp"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:tint="@android:color/holo_orange_light"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:backgroundTint="@android:color/holo_orange_light"
                 app:layout_constraintBottom_toTopOf="@id/matriMoneyFabBtn"
                 app:layout_constraintEnd_toEndOf="@id/matriMoneyFabBtn"
@@ -348,20 +362,15 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
                 android:text="Dating"
-                android:textColor="@color/black"
+                android:textColor="@color/material_dynamic_primary20"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@id/datingFabBtn"
                 app:layout_constraintEnd_toStartOf="@id/datingFabBtn"
                 app:layout_constraintTop_toTopOf="@id/datingFabBtn" />
 
 
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
