--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -145,6 +145,7 @@
             android:id="@+id/fabConstraint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="65dp"
             android:minHeight="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -179,6 +180,7 @@
                 android:id="@+id/notesTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
@@ -209,6 +211,7 @@
                 android:id="@+id/jobsTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
@@ -238,6 +241,7 @@
                 android:id="@+id/netClanGroupsTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
@@ -268,6 +272,7 @@
                 android:id="@+id/businessCardsTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
@@ -298,6 +303,7 @@
                 android:id="@+id/buySellRentTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
@@ -328,6 +334,7 @@
                 android:id="@+id/matriMoneyTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="-15dp"
                 android:elevation="8dp"
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="8dp"
