--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_alignParentBottom="true"
-            app:layout_anchor="@id/NavigationHost"
+            app:layout_anchor="@id/navigationHost"
             app:layout_anchorGravity="bottom"
             app:menu="@menu/bottom_items" />
 
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/NavigationHost"
+            android:id="@+id/navigationHost"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
